--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
       <blockquote>
-        <p>I think ThreeJS is Awesome!</p>
+        <p>These Graphics and Scenes are created in ThreeJS!</p>
       </blockquote>
 
       <section>
@@ -76,7 +76,7 @@
       </section>
 
       <blockquote>
-        <p>Thanks for watching!</p>
+        <p>Thanks for checking out!</p>
       </blockquote>
 
 
